force-app/main/default/objects/Repository_Config__mdt/Repository_Config__mdt.object-meta.xml
<CustomObject>
    <label>Repository Configuration</label>
    <pluralLabel>Repository Configurations</pluralLabel>
    <description>Configuration for individual GitHub repositories to synchronize</description>
</CustomObject>