force-app/main/default/objects/Repository_Config__mdt/fields/Default_Branch__c.field-meta.xml
<CustomField>
    <fullName>Default_Branch__c</fullName>
    <label>Default Branch</label>
    <description>Default branch name (e.g., main, master)</description>
    <type>Text</type>
    <length>100</length>
</CustomField>