force-app/main/default/objects/Repository_Config__mdt/fields/Polling_Interval__c.field-meta.xml
<CustomField>
    <fullName>Polling_Interval__c</fullName>
    <label>Polling Interval (Minutes)</label>
    <description>Custom synchronization interval in minutes (overrides default)</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>