force-app/main/default/objects/Repository_Config__mdt/fields/Repository_Name__c.field-meta.xml
<CustomField>
    <fullName>Repository_Name__c</fullName>
    <label>Repository Name</label>
    <description>Repository display name</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>