force-app/main/default/objects/Repository_Config__mdt/fields/Repository_Owner__c.field-meta.xml
<CustomField>
    <fullName>Repository_Owner__c</fullName>
    <label>Repository Owner</label>
    <description>GitHub organization or user that owns the repository</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>