force-app/main/default/objects/Repository_Config__mdt/fields/Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Sync_Enabled__c</fullName>
    <label>Sync Enabled</label>
    <description>Enable or disable synchronization for this repository</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>